# scaleway-infra-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  dot.env  ruff.toml
.assets/: architecture.excalidraw
.github/workflows/: ci.yml
ai-alt-generator/: Dockerfile  main.py  requirements.txt
challenges/: 01-terraform.md  02-secret-manager.md  README.md
docs/: DEPLOYMENT_STATUS.md  DESTROY_GUIDE.md  README.md  architecture.md  production-checklist.md
docs/api/: openapi.yaml
docs/internal/: zed-qwen-guide.md
docs/runbooks/: 01-incident-response.md  02-backup-restore.md  03-scaling-procedures.md  04-secret-rotation.md
image-converter/: Dockerfile  main.py  requirements.txt
image-processor/: Cargo.toml  Dockerfile  README.md
image-processor/src/: main.rs
k8s/: configmap.yaml  deployment.yaml  monitoring.yaml  namespace.yaml  secrets.yaml  service.yaml
migrations/: 001_add_alt_texts.sql
rest-api/: Dockerfile  app.py  requirements.txt
scripts/: backup-db.sh  backup-s3.sh  benchmark-compression.sh  empty-bucket.py  health-check.sh  rotate-secrets.sh  test-load.sh  test-wcag.sh
terraform/: .gitignore  .terraform.lock.hcl  compute.tf  database.tf  kapsule.tf  loadbalancer.tf  locals.tf  main.tf  network.tf  outputs.tf  registry.tf  secrets-ai.tf  secrets.tf  serverless.tf  storage.tf  terraform.tfstate.1776346830.backup  terraform.tfstate.1776418788.backup  terraform.tfstate.1776420611.backup  terraform.tfstate.1776429666.backup  variables.tf
web/: app.js  index.html  style.css
(+2 files in other folders)
