[package]
name = "image_processor"
version = "0.3.0"
edition = "2021"
description = "A simple Rust service to process images, converting PNG to JPEG."
license = "MIT"

[dependencies]
actix-web = "4.0"
image = "0.25"
env_logger = "0.11.5"
log = "0.4.22"

[[bin]]
name = "image_processor"
path = "src/main.rs"
